--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="container">
     <div class="shuffle">
     <div>
-		<img src="/roesticollective.github.io/" id="getImage">
+		<img src="./roesticollective.github.io/img/_.png" id="getImage">
     </div>
     <div>
     	<input type="button" onclick="imagefun()" value="Shuffle">
