--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="container">
     <div class="shuffle">
     <div>
-		<img src="/roesticollective.github.io/_.png" id="getImage">
+		<img src="/roesticollective.github.io/2.png" id="getImage">
     </div>
     <div>
     	<input type="button" onclick="imagefun()" value="Shuffle">
@@ -71,44 +71,35 @@
     <script>
         function imagefun() {
             var Image_Id = document.getElementById('getImage');
-            if (Image_Id.src.match("../roesticollective.github.io/img/_100.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_98.png";
+            if (Image_Id.src.match("../roesticollective.github.io/img/_20.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/_18.png";
             }
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_98.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_96.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/_18.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/_16.png";
             }   
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_96.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_94.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/_16.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/_14.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_94.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_92.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/_14.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/_12.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_92.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_90.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/_12.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/_10.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_90.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_88.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/_10.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/_8.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_88.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_86.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/_8.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/_6.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_86.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_84.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/_6.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/_4.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_84.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_82.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/_4.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/_2.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_82.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_80.png";
-            } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_80.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_78.png";
-            } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_78.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_.png";
-            } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_100.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/_2.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/_20.png";
             } 
             }        
     </script>
