--- a/index.html
+++ b/index.html
@@ -71,35 +71,35 @@
     <script>
         function imagefun() {
             var Image_Id = document.getElementById('getImage');
-            if (Image_Id.src.match("../roesticollective.github.io/img/_20.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_18.png";
+            if (Image_Id.src.match("../roesticollective.github.io/img/20.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/18.png";
             }
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_18.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_16.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/18.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/16.png";
             }   
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_16.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_14.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/16.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/14.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_14.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_12.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/14.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/12.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_12.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_10.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/12.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/10.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_10.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_8.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/10.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/8.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_8.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_6.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/8.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/6.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_6.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_4.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/6.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/4.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_4.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_2.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/4.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/2.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/_2.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/_20.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/img/2.png")) {
+                Image_Id.src = "../roesticollective.github.io/img/20.png";
             } 
             }        
     </script>
