--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="container">
     <div class="shuffle">
     <div>
-		<img src="/roesticollective.github.io/2.png" id="getImage">
+		<img src="../roesticollective.github.io/2.png" id="getImage">
     </div>
     <div>
     	<input type="button" onclick="imagefun()" value="Shuffle">
@@ -71,35 +71,35 @@
     <script>
         function imagefun() {
             var Image_Id = document.getElementById('getImage');
-            if (Image_Id.src.match("../roesticollective.github.io/img/20.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/18.png";
+            if (Image_Id.src.match("../roesticollective.github.io/20.png")) {
+                Image_Id.src = "../roesticollective.github.io/18.png";
             }
-            else if (Image_Id.src.match("../roesticollective.github.io/img/18.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/16.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/18.png")) {
+                Image_Id.src = "../roesticollective.github.io/16.png";
             }   
-            else if (Image_Id.src.match("../roesticollective.github.io/img/16.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/14.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/16.png")) {
+                Image_Id.src = "../roesticollective.github.io/14.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/14.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/12.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/14.png")) {
+                Image_Id.src = "../roesticollective.github.io/12.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/12.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/10.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/12.png")) {
+                Image_Id.src = "../roesticollective.github.io/10.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/10.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/8.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/10.png")) {
+                Image_Id.src = "../roesticollective.github.io/8.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/8.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/6.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/8.png")) {
+                Image_Id.src = "../roesticollective.github.io/6.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/6.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/4.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/6.png")) {
+                Image_Id.src = "../roesticollective.github.io/4.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/4.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/2.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/4.png")) {
+                Image_Id.src = "../roesticollective.github.io/2.png";
             } 
-            else if (Image_Id.src.match("../roesticollective.github.io/img/2.png")) {
-                Image_Id.src = "../roesticollective.github.io/img/20.png";
+            else if (Image_Id.src.match("../roesticollective.github.io/2.png")) {
+                Image_Id.src = "../roesticollective.github.io/20.png";
             } 
             }        
     </script>
