--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <title>starter_template</title>
     </head>
 <body>
+    <img src="../roesticollective.github.io/8.png" alt="">
 <div class="container">
     <div class="shuffle">
     <div>
