--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <meta name="author" content="Name">
 
         <link rel="shortcut icon" type="image/png" href="">
-        <link rel="stylesheet" href="css/myCss.css">
-        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="myCss.css">
+        <link rel="stylesheet" href="reset.css">
 
         <script src="js/jquery-3.5.1.min.js"></script>
         
